<resources>
    <string name="app_name">GoRum</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">消息</string>
    <string name="friend">朋友</string>
    <string name="circle">圈子</string>
    <string name="mine">我的</string>

    <string name="login_text8">登录</string>
    <string name="create_account">注册</string>
    <string name="forgot_password">忘记密码</string>
    <string name="password">密码</string>
    <string name="account">账号</string>

    <string name="account_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="get_msg_code">获取验证码</string>
    <string name="check_btn">获取验证码</string>

</resources>
