<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/main_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorC" />

    <RadioGroup
        android:id="@+id/main_rg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <RadioButton
            style="@style/MainRadioButton"
            android:drawableTop="@drawable/home_selector"
            android:gravity="center"
            android:paddingTop="6dp"
            android:textAllCaps="false"
            android:text="@string/message" />

        <RadioButton
            style="@style/MainRadioButton"
            android:drawableTop="@drawable/work_selector"
            android:gravity="center"
            android:paddingTop="6dp"
            android:textAllCaps="false"
            android:text="@string/friend" />

        <RadioButton
            style="@style/MainRadioButton"
            android:drawableTop="@drawable/shop_selector"
            android:gravity="center"
            android:paddingTop="6dp"
            android:textAllCaps="false"
            android:text="@string/circle" />

        <RadioButton
            style="@style/MainRadioButton"
            android:drawableTop="@drawable/zone_selector"
            android:gravity="center"
            android:paddingTop="6dp"
            android:textAllCaps="false"
            android:text="@string/mine" />

    </RadioGroup>

</LinearLayout>
