<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/account"
            android:textAllCaps="false"
            android:textColor="@color/color3"
            android:textSize="@dimen/sp18" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:gravity="center_horizontal"
            android:hint="@string/account_hint"
            android:inputType="phone"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textAllCaps="false"
            android:textColor="@color/color9"
            android:textCursorDrawable="@color/colorGray"
            android:textSize="@dimen/sp18" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/et_account"
            android:background="@color/color9" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_1"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/password"
            android:textAllCaps="false"
            android:textColor="@color/color3"
            android:textSize="@dimen/sp18" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="center_horizontal"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textAllCaps="false"
            android:textColor="@color/color9"
            android:textCursorDrawable="@color/colorGray"
            android:textSize="@dimen/sp18" />

        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_get_code_white"
            android:text="@string/get_msg_code"
            android:textAllCaps="false"
            android:textColor="@color/color3"
            android:textSize="@dimen/sp14"
            android:visibility="invisible" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/et_pwd"
            android:background="@color/color9" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/rl_2"
        android:layout_below="@+id/rl_2"
        android:paddingTop="8dp"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/color3"
        android:textSize="@dimen/sp14" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:layout_below="@id/rl_2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/btn_login"
        android:text="@string/login_text8"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp18" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/btn_login_register"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/color3"
        android:textSize="@dimen/sp18" />

</RelativeLayout>
